--- a/package.json
+++ b/package.json
@@ -22,6 +22,9 @@
     "@angular/router": "^15.0.0",
     "angular-split": "^14.1.0",
     "angular-vertical-tabs": "github:SamuelMarks/angular-vertical-material-tabs",
+    "chart.js": "^4.1.2",
+    "hammerjs": "^2.0.8",
+    "ng2-charts": "^4.1.1",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.12.0"
