--- a/angular.json
+++ b/angular.json
@@ -23,6 +23,7 @@
             "assets": [
               "src/favicon.ico",
               "src/assets"
+              
             ],
             "styles": [
               "@angular/material/prebuilt-themes/indigo-pink.css",
@@ -84,8 +85,8 @@
             ],
             "tsConfig": "tsconfig.spec.json",
             "assets": [
-              "src/favicon.ico",
-              "src/assets"
+              "src/favicon.ico"
+              
             ],
             "styles": [
               "@angular/material/prebuilt-themes/indigo-pink.css",
