--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
     "angular-vertical-tabs": "github:SamuelMarks/angular-vertical-material-tabs",
     "chart.js": "^4.1.2",
     "hammerjs": "^2.0.8",
+    "jszip": "^3.10.1",
+    "jszip-utils": "^0.1.0",
     "ng2-charts": "^4.1.1",
     "ngx-material-timepicker": "^5.5.3",
     "rxjs": "~7.5.0",
